--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,11 @@
         "php": "^8.2",
         "inertiajs/inertia-laravel": "^1.0",
         "laravel/framework": "^11.9",
+        "laravel/reverb": "^1.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
+        "laravel/ui": "^4.5",
+        "pusher/pusher-php-server": "^7.2",
         "tightenco/ziggy": "^2.0"
     },
     "require-dev": {
