--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     },
     "dependencies": {
         "@dnd-kit/core": "^6.1.0",
+        "react-dnd": "^16.0.1",
+        "react-dnd-html5-backend": "^16.0.1",
+        "react-icons": "^5.3.0",
         "simple-peer": "^9.11.1",
         "socket.io-client": "^4.8.1"
     }
