--- a/.env.example
+++ b/.env.example
@@ -34,7 +34,7 @@ SESSION_ENCRYPT=false
 SESSION_PATH=/
 SESSION_DOMAIN=null
 
-BROADCAST_CONNECTION=log
+BROADCAST_CONNECTION=pusher
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=database
 
@@ -64,3 +64,13 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+BROADCAST_DRIVER=pusher
+PUSHER_APP_ID=1895397
+PUSHER_APP_KEY=850300e98d76a0db2c51
+PUSHER_APP_SECRET=f30d47ef51a3fbcbf260
+PUSHER_APP_CLUSTER=ap1
+
+VITE_PUSHER_APP_KEY=850300e98d76a0db2c51
+VITE_PUSHER_APP_CLUSTER=ap1
+
