--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "react-dnd-html5-backend": "^16.0.1",
         "react-icons": "^5.3.0",
         "simple-peer": "^9.11.1",
-        "socket.io-client": "^4.8.1"
+        "socket.io-client": "^4.8.1",
+        "sweetalert2": "^11.14.5"
     }
 }
