--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     },
     "dependencies": {
         "@dnd-kit/core": "^6.1.0",
+        "html2canvas": "^1.4.1",
         "peerjs": "^1.5.4",
         "react-dnd": "^16.0.1",
         "react-dnd-html5-backend": "^16.0.1",
