--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "react-icons": "^5.3.0",
         "simple-peer": "^9.11.1",
         "socket.io-client": "^4.8.1",
-        "sweetalert2": "^11.14.5"
+        "sweetalert2": "^11.14.5",
+        "xlsx": "^0.18.5"
     }
 }
